# sat-solar-beta-app

./: .gitignore  README.md  Untitled
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/routers/: analysis.py
backend/app/services/: constants.py  constraints.py  eclipse.py  orbit.py  power.py  solar_array_geometry.py  sun_geometry.py  tracking.py
backend/tests/: test_analysis_v2.py  test_analysis_v3.py  test_constraints.py  test_eclipse.py  test_orbit.py  test_power.py  test_solar_array_geometry.py  test_sun_geometry.py
docs/: backend_math.md
frontend/: .env.example  .env.production  .firebaserc  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: .env.production  analysis.ts  client.ts
frontend/src/components/: BodyFrameViewer.tsx  InputPanel.tsx  OrbitViewer3D.tsx  PlotSection.tsx  SummaryCards.tsx
frontend/src/types/: analysis.ts
